--- a/djangogirls/mysite/blog/templates/blog/post_list.html
+++ b/djangogirls/mysite/blog/templates/blog/post_list.html
@@ -1,4 +1,4 @@
-
+{% extends 'blog/base.html' %}
 {% load static %}
 <!DOCTYPE html>
 <html>
@@ -17,15 +17,18 @@
     <main class="container">
                         <div class="row">
                             <div class="col">
+                                
+                                {% block content %}
                                 {% for post in posts %}
                                     <article class="post">
                                         <time class="date">
                                             {{ post.published_date }}
                                         </time>
-                                        <h2><a href="">{{ post.title }}</a></h2>
+                                         <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
                                         <p>{{ post.text|linebreaksbr }}</p>
                                     </article>
                                 {% endfor %}
+                                {% endblock %}
                             </div>
                         </div>
                     </main>           
