--- a/djangogirls/mysite/blog/templates/blog/base.html
+++ b/djangogirls/mysite/blog/templates/blog/base.html
@@ -11,6 +11,7 @@
         <header class="page-header">
             <div class="container">
                 {% if user.is_authenticated %}
+                <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
     <a href="{% url 'post_new' %}" class="top-menu">
         {% include './icons/file-earmark-plus.svg' %}
     </a>
